--- a/src/index.css
+++ b/src/index.css
@@ -1,60 +1,30 @@
 /*=============== GOOGLE FONTS ===============*/
-@import url("https://fonts.googleapis.com/css2?family=Aclonica&family=Montserrat:wght@100..900&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 /*=============== VARIABLES CSS ===============*/
 :root {
 	--header-height: 3.5rem;
 	
 	/*========== Colors ==========*/
-	/*Color mode HSL(hue, saturation, lightness)*/
-	/* Buttons, Headings, Links */
 	--primary: #7367f0;
-	
+	--secondary: #82868b;
 	/* Background Colors */
 	--home-page-bg: #f8f8f8;
-	--first-color-alt: hsl(45, 99%, 48%);
-	--second-color: hsl(22, 100%, 8%);
-	--white-color: hsl(34, 100%, 96%);
-	--title-color: hsl(22, 100%, 8%);
-	--text-color: hsl(22, 24%, 32%);
-	--text-color-light: hsl(23, 16%, 40%);
-	--body-color: hsl(34, 100%, 92%);
-	--body-color-alt: hsl(34, 100%, 88%);
-	--container-color: hsl(34, 100%, 96%);
-	--shadow-small-img: drop-shadow(0 4px 16px hsla(22, 100%, 8%, .2));
-	--shadow-big-img: drop-shadow(0 8px 24px hsla(22, 100%, 8%, .2));
-	
+	/* Text Colors */
+	--text-body: #6e6b7b;
+	--text-muted: #b9b9c3;
+	--text-dark: #2a2e30;
+	--text-grey-60: #858FA1;
+	--text-grey-100: #344563;
+	--card-shadow: 0 4px 24px 0 rgba(34, 41, 47, .1);
 	/*========== Font and typography ==========*/
 	/*.5rem = 8px | 1rem = 16px ...*/
-	--body-font: "Montserrat", sans-serif;
-	--second-font: "Aclonica", sans-serif;
-	--biggest-font-size: 3rem;
-	--h1-font-size: 1.5rem;
-	--h2-font-size: 1.25rem;
-	--h3-font-size: 1rem;
-	--normal-font-size: .938rem;
-	--small-font-size: .813rem;
+
 	
 	/*========== Font weight ==========*/
 	--font-regular: 400;
 	--font-medium: 500;
 	--font-semi-bold: 600;
 	
-	/*========== z index ==========*/
-	--z-tooltip: 10;
-	--z-fixed: 100;
-}
-
-/*========== Responsive typography ==========*/
-@media screen and (min-width: 1150px) {
-	:root {
-		--biggest-font-size: 4.5rem;
-		--h1-font-size: 2.25rem;
-		--h2-font-size: 1.5rem;
-		--h3-font-size: 1.25rem;
-		--normal-font-size: 1rem;
-		--small-font-size: .875rem;
-	}
 }
 
 /*=============== BASE ===============*/
@@ -65,6 +35,7 @@
 }
 
 html {
+	background-color: var(--home-page-bg);
 	scroll-behavior: smooth;
 	height: 100%;
 	font-size: 14px;
@@ -72,18 +43,54 @@ html {
 	line-height: 1.15;
 }
 
+/* Setup Default Font and Default color of text */
 body {
-	font-family: var(--body-font);
-	font-size: var(--normal-font-size);
-	background-color: var(--body-color);
-	color: var(--text-color);
+	height: 100%;
+	font-family: "Inter", Helvetica, Arial, sans-serif;
+	font-size: 1.1rem;
+	font-weight: 400;
+	line-height: 1.45;
+	color: var(--text-body)
+}
+#root, main {
+	height: 100%;
 }
 
-h1, h2, h3, h4 {
-	color: var(--title-color);
-	font-family: var(--second-font);
-	font-weight: var(--font-regular);
+.h1,h1 {
+	font-size: 2.64rem
 }
+
+.h2,h2 {
+	font-size: 2.26248rem
+}
+
+.h3,h3 {
+	font-size: 1.98rem
+}
+
+.h4,h4 {
+	font-size: 1.69752rem
+}
+
+.h5,h5 {
+	font-size: 1.518rem
+}
+
+.h6,h6 {
+	font-size: 1.1rem
+}
+
+.lead {
+	font-size: 1.254rem;
+	font-weight: 400
+}
+
+.display-3 {
+	font-size: 4.5rem;
+	font-weight: 400;
+	line-height: 1.2
+}
+
 
 ul {
 	list-style: none;
@@ -92,6 +99,9 @@ ul {
 a {
 	color: var(--primary);
 	text-decoration: none;
+	font-size: 1.1rem;
+	font-weight: 400;
+	line-height: 1.45;
 }
 
 img {
@@ -102,8 +112,8 @@ img {
 
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container {
-	max-width: 1120px;
-	margin-inline: 1.5rem;
+	max-width: 960px;
+	margin: 0 auto;
 }
 
 .grid {
@@ -111,21 +121,43 @@ img {
 	gap: 1.5rem;
 }
 
-.section {
-	padding-block: 5rem 1rem;
-}
-
-.section__title {
-	text-align: center;
-	font-size: var(--h1-font-size);
-	margin-bottom: 2rem;
-}
 
 .main {
 	overflow: hidden;
 }
 
-/* Reusable Button Components */
+/* Text */
+.title-1 {
+	color: var(--text-grey-100);
+	font-size: 24px;
+	font-weight: 700;
+}
+.title-3 {
+	color: var(--text-grey-60);
+	font-size: 1rem;
+}
+.text-muted {
+	color: var(--text-muted)
+}
+
+.text-secondary {
+	color: var(--secondary);
+}
+
+.text-dark {
+	color: var(--text-dark)
+}
+
+.text-body {
+	color: var(--text-body);
+}
+
+.text-small {
+	font-size: .857rem;
+	font-weight: 400;
+}
+
+/* Reusable Components */
 .btn {
 	display: inline-block;
 	text-align: center;
@@ -136,7 +168,6 @@ img {
 	font-weight: 500;
 	font-size: 1.1rem;
 	line-height: 1;
-	
 }
 
 .btn-primary {
@@ -150,69 +181,50 @@ img {
 	background-color: transparent;
 }
 
-
-/*=============== HEADER & NAV ===============*/
-
-
-/* Navigation for mobile devices */
-
-
-/* Show menu */
-
-
-/* Add shadow header */
-
-
-/* Active link */
-
-
-/*=============== HOME ===============*/
-.hero {
-
+/* Avatar */
+.avatar {
+	width: 32px;
+	height: 32px;
+	border-radius: 50%;
+	background-color: var(--secondary);
+	font-size: .857rem;
+	font-weight: 600;
+	color: #fff;
 }
 
-.hero .headline {
-	max-width: 750px;
-	font-size: 50px;
-	font-weight: 700;
-	background-image: linear-gradient(45deg, #9a2ffe, #17cbff);
-	text-align: center;
-	margin-bottom: 1.5rem;
+.avatar .avatar-img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+/* Card */
+.card {
+	background-color: white;
+	box-shadow: var(--card-shadow);
+	margin-bottom: 2rem;
+	border-radius: .428rem;
+}
+
+.card-shadow {
+	box-shadow: var(--card-shadow);
+}
+
+/* List Group */
+.list-group:last-child {
+	border-bottom-right-radius: calc(.428rem - 1px);
+	border-bottom-left-radius: calc(.428rem - 1px);
+}
+
+.list-group:first-child {
+	border-top-left-radius: calc(.428rem - 1px);
+	border-top-right-radius: calc(.428rem - 1px);
+}
+
+.list-group .list-group-item {
+	padding: .75rem 1.25rem;
+	background-color: #fff;
+	border: 1px solid rgba(34, 41, 47, .125);
 }
 
 
-/*=============== BUTTON ===============*/
 
-
-/*=============== RECIPE ===============*/
-
-
-/*=============== POPULAR ===============*/
-
-
-/*=============== DELIVERY ===============*/
-
-
-/*=============== CONTACT ===============*/
-
-
-/*=============== FOOTER ===============*/
-
-
-/*=============== SCROLL BAR ===============*/
-
-
-/*=============== SCROLL UP ===============*/
-
-
-/* Show Scroll Up */
-
-
-/*=============== BREAKPOINTS ===============*/
-/* For small devices */
-
-
-/* For medium devices */
-
-
-/* For large devices */
