Finished Styling Search Form

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
 	--text-dark: #2a2e30;
 	--text-grey-60: #858FA1;
 	--text-grey-100: #344563;
+	--border-color: #d8d6de;
 	--card-shadow: 0 4px 24px 0 rgba(34, 41, 47, .1);
 	/*========== Font and typography ==========*/
 	/*.5rem = 8px | 1rem = 16px ...*/
