--- a/src/components/HeroContent/HeroContent.css
+++ b/src/components/HeroContent/HeroContent.css
@@ -4,14 +4,14 @@
 	flex-direction: column;
 	align-items: center;
 	padding-top: 8rem;
-	padding-bottom: 8rem;
+
 }
 .hero .hero-content {
 	max-width: 700px;
 }
 .hero .hero-headline {
 	background-image: linear-gradient(45deg, #9a2ffe, #17cbff);
-	font-size: 50px;
+	font-size: 4rem;
 	color: transparent;
 	background-clip: text;
 	-webkit-background-clip: text;
@@ -19,14 +19,15 @@
 	background-size: 100%;
 	font-weight: 700;
 	line-height: 1.2;
-	margin-bottom: .5rem;
+	margin-bottom: 1rem;
 	text-align: center;
+	
 
 }
 .hero .hero-text {
-	margin: 0 auto;
 	text-align: center;
 	font-size: 20px;
 	font-weight: 300;
 	line-height: 1.8;
+	margin-bottom: 2rem;
 }
