--- a/src/index.css
+++ b/src/index.css
@@ -58,9 +58,7 @@ body {
 	height: 100%;
 	
 }
-main {
-	padding: 8rem;
-}
+
 
 .h1,h1 {
 	font-size: 2.64rem
@@ -164,6 +162,7 @@ a {
 }
 
 /* Reusable Components */
+/* Button */
 .btn {
 	display: inline-block;
 	text-align: center;
@@ -187,23 +186,6 @@ a {
 	background-color: transparent;
 }
 
-/* Avatar */
-.avatar {
-	width: 80px;
-	height: 80px;
-	border-radius: 50%;
-	background-color: var(--secondary);
-	font-size: .857rem;
-	font-weight: 600;
-	color: #fff;
-	overflow: hidden;
-}
-
-.avatar .avatar-img {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-}
 /* Card */
 .card {
 	background-color: white;
