--- a/src/components/UserBanner/UserBanner.css
+++ b/src/components/UserBanner/UserBanner.css
@@ -2,28 +2,19 @@
 	padding: 2rem;
 	display: flex;
 	align-items: center;
-	gap: 2rem;
+	justify-content: space-between;
 }
 
-.profile-image {
+.user-banner .profile-container {
 	width: 120px;
 	height: 120px;
 	border-radius: 50% !important;
 	overflow: hidden;
 	box-shadow: var(--card-shadow);
+
 }
 
-.profile-image .image {
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	mask-image: radial-gradient(#fff, #000);
-}
-
-.profile-image img {
+.profile-container img {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
@@ -32,6 +23,9 @@
 .user-meta .username, .user-meta .nickname, .user-stats .value {
 	font-weight: 600;
 	color: var(--text-dark);
+}
+.user-stats .value {
+	font-size: 1.3rem;
 }
 
 .user-meta .nickname {
@@ -53,17 +47,18 @@
 	color: var(--secondary);
 	font-size: 1.1rem;
 	font-weight: 400;
-	margin-bottom: .5rem;
+	
 }
 
 .stats-row {
 	display: flex;
-	flex-grow: 1;
-	text-align: center;
+	flex-wrap: wrap;
+	
 }
 
 .stats-row .stat-item {
-	flex: 1 0 25%;
+	flex: 0 0 50%;
+	margin-bottom: .5rem;
 }
 
 .details .headline {
