--- a/src/components/HeroContent/HeroContent.css
+++ b/src/components/HeroContent/HeroContent.css
@@ -1,33 +1,17 @@
 .hero {
-	height: calc(100vh - 90px);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	padding-top: 8rem;
-
 }
 .hero .hero-content {
 	max-width: 700px;
 }
-.hero .hero-headline {
+.hero-text-bg {
 	background-image: linear-gradient(45deg, #9a2ffe, #17cbff);
-	font-size: 4rem;
 	color: transparent;
 	background-clip: text;
 	-webkit-background-clip: text;
 	background-color: #2a2e30;
 	background-size: 100%;
-	font-weight: 700;
-	line-height: 1.2;
-	margin-bottom: 1rem;
-	text-align: center;
-	
-
-}
-.hero .hero-text {
-	text-align: center;
-	font-size: 20px;
-	font-weight: 300;
-	line-height: 1.8;
-	margin-bottom: 2rem;
 }
