--- a/src/index.css
+++ b/src/index.css
@@ -40,19 +40,19 @@ html {
 	background-color: var(--home-page-bg);
 	scroll-behavior: smooth;
 	height: 100%;
-	font-size: 14px;
-	letter-spacing: .01rem;
-	line-height: 1.15;
+	font-size: 16px;
+
 }
 
 /* Setup Default Font and Default color of text */
 body {
 	height: 100%;
 	font-family: "Inter", Helvetica, Arial, sans-serif;
-	font-size: 1.1rem;
+	font-size: 1rem;
 	font-weight: 400;
-	line-height: 1.45;
-	color: var(--text-body)
+	letter-spacing: .01rem;
+	line-height: 1.15;
+	color: #6e6b7b;
 }
 #root, main {
 	height: 100%;
@@ -60,40 +60,18 @@ body {
 }
 
 
-.h1,h1 {
-	font-size: 2.64rem
-}
-
-.h2,h2 {
-	font-size: 2.26248rem
-}
-
-.h3,h3 {
-	font-size: 1.98rem
-}
-
-.h4,h4 {
-	font-size: 1.69752rem
-}
-
-.h5,h5 {
-	font-size: 1.518rem
-}
-
-.h6,h6 {
-	font-size: 1.1rem
-}
 
 .lead {
 	font-size: 1.254rem;
 	font-weight: 400
 }
-
-.display-3 {
-	font-size: 4.5rem;
-	font-weight: 400;
-	line-height: 1.2
+.lh-15 {
+	line-height: 1.5rem;
 }
+.lh-2 {
+	line-height: 2rem;
+}
+
 
 
 ul {
@@ -115,15 +93,9 @@ a {
 /*}*/
 
 /*=============== REUSABLE CSS CLASSES ===============*/
-.page-container {
-	height: calc(100vh - 90px);
-	padding-top: 2rem;
+.b {
+	border: 1px solid purple;
 }
-.container {
-	max-width: 960px;
-	margin: 0 auto;
-}
-
 .grid {
 	display: grid;
 	gap: 1.5rem;
@@ -145,7 +117,7 @@ a {
 	font-size: 1rem;
 }
 .text-muted {
-	color: var(--text-muted)
+	color: #6e6b7b;
 }
 
 .text-secondary {
@@ -153,7 +125,7 @@ a {
 }
 
 .text-dark {
-	color: var(--text-dark)
+	color: #2a2e30;
 }
 
 .text-body {
@@ -201,5 +173,144 @@ a {
 .card-shadow {
 	box-shadow: var(--card-shadow);
 }
+
+/* Spacing Utilities */
+/* Margin Right */
+.mr-1 {
+  margin-right: 1rem;
+}
+
+.mr-2 {
+  margin-right: 2rem;
+}
+
+.mr-3 {
+  margin-right: 3rem;
+}
+
+.mr-4 {
+  margin-right: 4rem;
+}
+
+/* Margin Bottom */
+.mb-1 {
+  margin-bottom: 1rem;
+}
+
+.mb-2 {
+  margin-bottom: 2rem;
+}
+
+.mb-3 {
+  margin-bottom: 3rem;
+}
+
+.mb-4 {
+  margin-bottom: 4rem;
+}
+
+/* Margin Left */
+.ml-1 {
+  margin-left: 1rem;
+}
+
+.ml-2 {
+  margin-left: 2rem;
+}
+
+.ml-3 {
+  margin-left: 3rem;
+}
+
+.ml-4 {
+  margin-left: 4rem;
+}
+
+/* Margin Top */
+.mt-1 {
+  margin-top: 1rem;
+}
+
+.mt-2 {
+  margin-top: 2rem;
+}
+
+.mt-3 {
+  margin-top: 3rem;
+}
+
+.mt-4 {
+  margin-top: 4rem;
+}
+
+/* Padding Right */
+.pr-1 {
+  padding-right: 1rem;
+}
+
+.pr-2 {
+  padding-right: 2rem;
+}
+
+.pr-3 {
+  padding-right: 3rem;
+}
+
+.pr-4 {
+  padding-right: 4rem;
+}
+
+/* Padding Bottom */
+.pb-1 {
+  padding-bottom: 1rem;
+}
+
+.pb-2 {
+  padding-bottom: 2rem;
+}
+
+.pb-3 {
+  padding-bottom: 3rem;
+}
+
+.pb-4 {
+  padding-bottom: 4rem;
+}
+
+/* Padding Left */
+.pl-1 {
+  padding-left: 1rem;
+}
+
+.pl-2 {
+  padding-left: 2rem;
+}
+
+.pl-3 {
+  padding-left: 3rem;
+}
+
+.pl-4 {
+  padding-left: 4rem;
+}
+
+/* Padding Top */
+.pt-1 {
+  padding-top: 1rem;
+}
+
+.pt-2 {
+  padding-top: 2rem;
+}
+
+.pt-3 {
+  padding-top: 3rem;
+}
+
+.pt-4 {
+  padding-top: 4rem;
+}
+
+
 
 
