--- a/src/index.css
+++ b/src/index.css
@@ -41,276 +41,41 @@ html {
 	scroll-behavior: smooth;
 	height: 100%;
 	font-size: 16px;
-
+	font-family: "Inter", Helvetica, Arial, sans-serif;
+	font-weight: 400;
+	letter-spacing: .01rem;
+	line-height: 1.15;
+	color: #6e6b7b;
 }
 
 /* Setup Default Font and Default color of text */
 body {
 	height: 100%;
-	font-family: "Inter", Helvetica, Arial, sans-serif;
-	font-size: 1rem;
-	font-weight: 400;
-	letter-spacing: .01rem;
-	line-height: 1.15;
-	color: #6e6b7b;
+
 }
 #root, main {
 	height: 100%;
 	
 }
 
-
-
-.lead {
-	font-size: 1.254rem;
-	font-weight: 400
-}
-.lh-15 {
-	line-height: 1.5rem;
-}
-.lh-2 {
-	line-height: 2rem;
-}
-
-
-
 ul {
 	list-style: none;
 }
-
 a {
 	color: var(--primary);
 	text-decoration: none;
 	font-size: 1.1rem;
 	font-weight: 400;
-	line-height: 1.45;
 }
 
-/*img {*/
-/*	display: block;*/
-/*	max-width: 100%;*/
-/*	height: auto;*/
-/*}*/
-
-/*=============== REUSABLE CSS CLASSES ===============*/
-.b {
-	border: 1px solid purple;
-}
-.grid {
-	display: grid;
-	gap: 1.5rem;
+img {
+	display: block;
+	max-width: 100%;
+	height: auto;
 }
 
-
-.main {
-	overflow: hidden;
+/* Page Styles */
+.body-background {
+	background: #f8f8f8;
 }
-
-/* Text */
-.title-1 {
-	color: var(--text-grey-100);
-	font-size: 24px;
-	font-weight: 700;
-}
-.title-3 {
-	color: var(--text-grey-60);
-	font-size: 1rem;
-}
-.text-muted {
-	color: #6e6b7b;
-}
-
-.text-secondary {
-	color: var(--secondary);
-}
-
-.text-dark {
-	color: #2a2e30;
-}
-
-.text-body {
-	color: var(--text-body);
-}
-
-.text-small {
-	font-size: .857rem;
-	font-weight: 400;
-}
-
-/* Reusable Components */
-/* Button */
-.btn {
-	display: inline-block;
-	text-align: center;
-	background-color: transparent;
-	border: 1px solid transparent;
-	padding: .786rem 1.5rem;
-	border-radius: .358rem;
-	font-weight: 500;
-	font-size: 1.1rem;
-	line-height: 1;
-}
-
-.btn-primary {
-	background: var(--primary);
-	color: white;
-}
-
-.btn-outline-primary {
-	color: var(--primary);
-	border: 1px solild var(--primary);
-	background-color: transparent;
-}
-
-/* Card */
-.card {
-	background-color: white;
-	box-shadow: var(--card-shadow);
-	border-radius: .428rem;
-	border: 1px solid rgba(34, 41, 47, .125);
-}
-
-.card-shadow {
-	box-shadow: var(--card-shadow);
-}
-
-/* Spacing Utilities */
-/* Margin Right */
-.mr-1 {
-  margin-right: 1rem;
-}
-
-.mr-2 {
-  margin-right: 2rem;
-}
-
-.mr-3 {
-  margin-right: 3rem;
-}
-
-.mr-4 {
-  margin-right: 4rem;
-}
-
-/* Margin Bottom */
-.mb-1 {
-  margin-bottom: 1rem;
-}
-
-.mb-2 {
-  margin-bottom: 2rem;
-}
-
-.mb-3 {
-  margin-bottom: 3rem;
-}
-
-.mb-4 {
-  margin-bottom: 4rem;
-}
-
-/* Margin Left */
-.ml-1 {
-  margin-left: 1rem;
-}
-
-.ml-2 {
-  margin-left: 2rem;
-}
-
-.ml-3 {
-  margin-left: 3rem;
-}
-
-.ml-4 {
-  margin-left: 4rem;
-}
-
-/* Margin Top */
-.mt-1 {
-  margin-top: 1rem;
-}
-
-.mt-2 {
-  margin-top: 2rem;
-}
-
-.mt-3 {
-  margin-top: 3rem;
-}
-
-.mt-4 {
-  margin-top: 4rem;
-}
-
-/* Padding Right */
-.pr-1 {
-  padding-right: 1rem;
-}
-
-.pr-2 {
-  padding-right: 2rem;
-}
-
-.pr-3 {
-  padding-right: 3rem;
-}
-
-.pr-4 {
-  padding-right: 4rem;
-}
-
-/* Padding Bottom */
-.pb-1 {
-  padding-bottom: 1rem;
-}
-
-.pb-2 {
-  padding-bottom: 2rem;
-}
-
-.pb-3 {
-  padding-bottom: 3rem;
-}
-
-.pb-4 {
-  padding-bottom: 4rem;
-}
-
-/* Padding Left */
-.pl-1 {
-  padding-left: 1rem;
-}
-
-.pl-2 {
-  padding-left: 2rem;
-}
-
-.pl-3 {
-  padding-left: 3rem;
-}
-
-.pl-4 {
-  padding-left: 4rem;
-}
-
-/* Padding Top */
-.pt-1 {
-  padding-top: 1rem;
-}
-
-.pt-2 {
-  padding-top: 2rem;
-}
-
-.pt-3 {
-  padding-top: 3rem;
-}
-
-.pt-4 {
-  padding-top: 4rem;
-}
-
-
-
 
