--- a/src/typography.css
+++ b/src/typography.css
@@ -62,7 +62,7 @@
 /* Text Utilities */
 
 .display-1 {
-	font-size: 4.5rem;
+	font-size: 4rem;
 	font-weight: 700;
 	line-height: 1.2
 }
@@ -72,11 +72,9 @@
 	line-height: 1.2
 }
 
-
 .normal-text {
 	font-size: 16px;
 }
-
 .lead {
 	font-size: 1.5rem;
 	font-weight: 300;
@@ -93,6 +91,25 @@
 .text-primary {
 	color: #7367f0;
 }
+.text-muted {
+	color: #6e6b7b;
+}
+.text-secondary {
+	color: #82868b;
+}
+.text-dark {
+	color: #2a2e30;
+}
 
 
 
+
+
+
+/* Line Height */
+.lh-15 {
+	line-height: 1.5rem;
+}
+.lh-2 {
+	line-height: 2rem;
+}
